IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
9/8/14: IMOD_4-8-13
9/8/14: Changed autofidseed to create a specified temporary directory, not
just the default one (In 4.7).

9/8/14: Added script Subtomosetup to make command files for generating
multiple numbered subtomograms.

9/8/14: Fixed imodinfo listing objects multiple times with multiple input
files (In 4.7).

9/7/14: Fixed 3dmod loading of subset in Z for non-cached data.

9/4/14: In eTomo - PEET, handling a reference without brackets in the .prm
file.  Also added line numbers to the parsing error messages.(Bug# 1815)

9/4/14: In eTomo - uitest, fixed values that where not working with changes in
IMOD.  Added a test for a fiducial size of 0.(Bug# 1799)

9/4/14: Fixed number of processors used for SIRT run from Batchruntomo (In
4.7).

8/30/14: IMOD_4-8-11
8/30/14: Added button to export graph values to file from 3dmod Graph window.

8/28/14: IMOD_4-7-9
8/22/14: Fixed problem with movie snapshots starting with the current image
instead of starting one on some systems; made Slicer movies do double shots on
ends the same as Zap ones do.

8/18/14: Added options to Mtffilter to filter in 1-D and to apply an R-weighted
filter.

8/15/14: In eTomo - PEET, added a radio button for setting yaxisType to 3.
(Bug# 1787)

8/15/14: IMOD_4-7-8
8/15/14: Fixed bug that caused crash in Nda (In 4.7).

8/7/14: Changes for 3dmod image processing: Kept track of sequence of
operations so that they can be reapplied easily; added buttons to remove last
one from list, redo all operations, and list the command-line operations in the
Info windows; added option to save modified data to memory automatically; made
thresholding able to update continuously; added File-Process File menu item to
apply operations to image file or subset inside rubber band.

8/7/14: Added option to change output mode from Mtffilter, and a warning when
output is out of range for the existing mode.
