@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+9/14/14: Made patch2imod able to read up to 6 extra value columns and save
+selected columns as general values in the model.
+
 9/8/14: IMOD_4-8-13
 9/8/14: Changed autofidseed to create a specified temporary directory, not
 just the default one (In 4.7).
